--- a/.github/workflows/pr-debug-publish.yaml
+++ b/.github/workflows/pr-debug-publish.yaml
@@ -163,7 +163,7 @@ jobs:
           tags: |
             type=raw,value=pr-${{ github.event.inputs.pr_number }}-${{ needs.prepare_pr_info.outputs.head_sha_short }}
             type=raw,value=pr-${{ github.event.inputs.pr_number }}
-      - name: Build Prometheus Federator image
+      - name: Build prometheus-federator image
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -175,7 +175,7 @@ jobs:
 
   comment-on-pr:
     name: Comment on PR with image details
-    runs-on: ubuntu-latest
+    runs-on: ${{ github.repository == 'rancher/prometheus-federator' && format('runs-on,image=ubuntu22-full-x64,runner=4cpu-linux-x64,run-id={0}', github.run_id) || 'ubuntu-latest' }}
     needs:
       - build_dev_helm_locker
       - build_dev_helm_project_operator
@@ -210,10 +210,10 @@ jobs:
               }
             ];
 
-            const prepareTags = (tags) => tags.split(' ').join('\`, \`')
+            const prepareTags = (tags) => tags.split(' ').join('\`,\n \`')
             const commentBody = images
               .map(image => `- **${image.name}**: [Link to image](${image.url}):\n  Tags: \`${prepareTags(process.env[image.key])}\``)
-              .join('\n\n');1
+              .join('\n\n');
 
             github.rest.issues.createComment({
               issue_number: prNumber,
