--- a/charts/prometheus-federator/0.4.5-rc.1/Chart.yaml
+++ b/charts/prometheus-federator/0.4.5-rc.1/Chart.yaml
@@ -7,7 +7,7 @@ annotations:
   catalog.cattle.io/provides-gvr: helm.cattle.io.projecthelmchart/v1alpha1
   catalog.cattle.io/release-name: prometheus-federator
 apiVersion: v2
-appVersion: 0.4.3
+appVersion: v0.4.3
 dependencies:
 - name: helmProjectOperator
   repository: file://./charts/helmProjectOperator
