--- a/charts/prometheus-federator/0.4.5-rc.1/values.yaml
+++ b/charts/prometheus-federator/0.4.5-rc.1/values.yaml
@@ -68,7 +68,7 @@ helmProjectOperator:
   image:
     registry: ''
     repository: rancher/prometheus-federator
-    tag: ''
+    tag: v0.4.3
     pullPolicy: IfNotPresent
 
   # Additional arguments to be passed into the Prometheus Federator image
