--- a/packages/rancher-project-monitoring/generated-changes/exclude/templates/prometheus-operator/psp-clusterrole.yaml
+++ b/packages/rancher-project-monitoring/generated-changes/exclude/templates/prometheus-operator/psp-clusterrole.yaml
@@ -1,5 +1,5 @@
+{{- if and .Values.prometheusOperator.enabled .Values.global.rbac.create .Values.global.rbac.pspEnabled }}
 {{- if .Capabilities.APIVersions.Has "policy/v1beta1/PodSecurityPolicy" }}
-{{- if and .Values.prometheusOperator.enabled (or .Values.global.cattle.psp.enabled (and .Values.global.rbac.create .Values.global.rbac.pspEnabled)) }}
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
