--- a/packages/new-rancher-project-monitoring/new-rancher-project-monitoring/charts/Chart.yaml
+++ b/packages/new-rancher-project-monitoring/new-rancher-project-monitoring/charts/Chart.yaml
@@ -10,6 +10,7 @@ dependencies:
 - condition: grafana.enabled
   name: grafana
   repository: file://./charts/grafana
+  version: 6.38.6
 description: Collects several related Helm charts, Grafana dashboards, and Prometheus
   rules combined with documentation and scripts to provide easy to operate end-to-end
   Kubernetes cluster monitoring with Prometheus. Depends on the existence of a Cluster
