--- a/packages/prometheus-federator/charts/Chart.yaml
+++ b/packages/prometheus-federator/charts/Chart.yaml
@@ -7,7 +7,7 @@ annotations:
   catalog.cattle.io/provides-gvr: helm.cattle.io.projecthelmchart/v1alpha1
   catalog.cattle.io/release-name: prometheus-federator
 apiVersion: v2
-appVersion: v0.4.4-rc.1
+appVersion: v0.4.4
 dependencies:
 - name: helmProjectOperator
   repository: file://./charts/helmProjectOperator
@@ -15,4 +15,4 @@ dependencies:
 description: Prometheus Federator
 icon: https://raw.githubusercontent.com/rancher/prometheus-federator/main/assets/logos/prometheus-federator.svg
 name: prometheus-federator
-version: 0.4.5-rc.1
+version: 0.4.5
