--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -30,7 +30,7 @@ jobs:
           helm version
           rm get_helm.sh
       - name: Package helm chart
-        run : ./scripts/build-chart
+        run : ./scripts/build-chart && BUILD_TARGET=helm-project-operator ./scripts/build-chart
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
