--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -45,15 +45,10 @@ jobs:
         uses: azure/setup-helm@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Prepare helm charts for debug artifacts
+      - name: Prepare helm charts (needed for build)
         run: |
-          BUILD_TARGET=helm-locker make package-helm && echo "hl: chart success"
-          BUILD_TARGET=helm-project-operator make package-helm && echo "hpo: embeded chart success"
-          BUILD_TARGET=prometheus-federator make package-helm && echo "pf: embeded chart success"
-      - name: Prepare embedded helm chart (needed for build)
-        run: |
-          BUILD_TARGET=helm-project-operator make build-chart
-          BUILD_TARGET=prometheus-federator make build-chart
+          BUILD_TARGET=prometheus-federator make package-helm && echo "pf: release chart prepared"
+          BUILD_TARGET=prometheus-federator make build-chart && echo "pf: embedded project-monitoring chart prepared"
       - uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
