--- a/build.yaml
+++ b/build.yaml
@@ -1,7 +1,7 @@
 rancherProjectMonitoringVersion: 0.6.0
 rancherMonitoringVersion : latest
-k3sTestingMaxVersion: v1.32.1+k3s1
-k3sTestingMinVersion: v1.30.9+k3s1
+k3sTestingMaxVersion: v1.33.0-k3s1
+k3sTestingMinVersion: v1.31.8-k3s1
 
 # Dev use only
 # devChartsSource: https://github.com/{Dev}/ob-team-charts
