--- a/build.yaml
+++ b/build.yaml
@@ -2,6 +2,7 @@ rancherProjectMonitoringVersion: 0.5.0
 rancherMonitoringVersion : 105.2.0+up66.7.1-rancher.10
 k3sTestingMaxVersion: v1.31.7-k3s1
 k3sTestingMinVersion: v1.28.15-k3s1
+kuberlrVersion: v5
 
 # Dev use only
 # devChartsSource: https://github.com/{Dev}/ob-team-charts
