--- a/build.yaml
+++ b/build.yaml
@@ -2,6 +2,7 @@ rancherProjectMonitoringVersion: 0.6.0
 rancherMonitoringVersion : latest
 k3sTestingMaxVersion: v1.32.1+k3s1
 k3sTestingMinVersion: v1.30.9+k3s1
+kuberlrVersion: v4
 
 # Dev use only
 # devChartsSource: https://github.com/{Dev}/ob-team-charts
